fix: Thinner quote gutter on mobile

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -1880,11 +1880,15 @@ body > [data-popper-placement] {
 .status__quote {
   position: relative;
   margin-block-start: 16px;
-  margin-inline-start: 56px;
+  margin-inline-start: 36px;
   border-radius: 8px;
   color: var(--nested-card-text);
   background: var(--nested-card-background);
   border: var(--nested-card-border);
+
+  @media screen and (min-width: $mobile-breakpoint) {
+    margin-inline-start: 56px;
+  }
 }
 
 .status__quote--error {
@@ -1930,7 +1934,7 @@ body > [data-popper-placement] {
 .status__quote-icon {
   position: absolute;
   inset-block-start: 18px;
-  inset-inline-start: -50px;
+  inset-inline-start: -40px;
   display: block;
   width: 26px;
   height: 26px;
@@ -1941,6 +1945,10 @@ body > [data-popper-placement] {
   .status__quote--error & {
     inset-block-start: 50%;
     transform: translateY(-50%);
+  }
+
+  @media screen and (min-width: $mobile-breakpoint) {
+    inset-inline-start: -50px;
   }
 }
 
